02-exercises/errs.log
File "19-refs/problem.ml", line 27, characters 0-97: Testing min_and_max... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_19__Problem.min_and_max in file "19-refs/problem.ml" (inlined), line 21, characters 2-33
  Called from Problem_19__Problem.(fun) in file "19-refs/problem.ml", line 28, characters 30-55

File "19-refs/problem.ml", line 31, characters 0-97: Testing min_and_max... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_19__Problem.min_and_max in file "19-refs/problem.ml" (inlined), line 21, characters 2-33
  Called from Problem_19__Problem.(fun) in file "19-refs/problem.ml", line 32, characters 28-54

FAILED 2 / 2 tests
File "16-tuples/problem.ml", line 63, characters 0-83: Testing add... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_16__Problem.add in file "16-tuples/problem.ml" (inlined), line 25, characters 24-55
  Called from Problem_16__Problem.(fun) in file "16-tuples/problem.ml", line 63, characters 63-83

File "16-tuples/problem.ml", line 64, characters 0-71: Testing first... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_16__Problem.first in file "16-tuples/problem.ml" (inlined), line 59, characters 17-48
  Called from Problem_16__Problem.(fun) in file "16-tuples/problem.ml", line 64, characters 49-71

File "16-tuples/problem.ml", line 65, characters 0-65: Testing second... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_16__Problem.second in file "16-tuples/problem.ml" (inlined), line 60, characters 18-49
  Called from Problem_16__Problem.(fun) in file "16-tuples/problem.ml", line 65, characters 46-65

FAILED 3 / 3 tests
File "17-records/problem.ml", line 84, characters 2-103: Testing modify_person... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_17__Problem.modify_person in file "17-records/problem.ml" (inlined), line 63, characters 2-33
  Called from Problem_17__Problem.For_testing.(fun) in file "17-records/problem.ml", line 85, characters 39-63

File "17-records/problem.ml", line 88, characters 2-103: Testing modify_person... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_17__Problem.modify_person in file "17-records/problem.ml" (inlined), line 63, characters 2-33
  Called from Problem_17__Problem.For_testing.(fun) in file "17-records/problem.ml", line 89, characters 39-63

FAILED 2 / 2 tests
File "20-anonymous_functions/problem.ml", line 76, characters 0-71: Testing add1_if_nonzero... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_20__Problem.add1_if_nonzero in file "20-anonymous_functions/problem.ml" (inlined), line 74, characters 2-33
  Called from Problem_20__Problem.(fun) in file "20-anonymous_functions/problem.ml", line 77, characters 12-31

File "20-anonymous_functions/problem.ml", line 79, characters 0-71: Testing add1_if_nonzero... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_20__Problem.add1_if_nonzero in file "20-anonymous_functions/problem.ml" (inlined), line 74, characters 2-33
  Called from Problem_20__Problem.(fun) in file "20-anonymous_functions/problem.ml", line 80, characters 12-31

File "20-anonymous_functions/problem.ml", line 82, characters 0-71: Testing add1_if_nonzero... threw (Failure "For you to implement").
  Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
  Called from Problem_20__Problem.add1_if_nonzero in file "20-anonymous_functions/problem.ml" (inlined), line 74, characters 2-33
  Called from Problem_20__Problem.(fun) in file "20-anonymous_functions/problem.ml", line 83, characters 12-31

FAILED 3 / 3 tests
File "06-pattern-matching/problem.ml", line 52, characters 13-14:
52 |   | non_zero x non_zero y -> true
                  ^
Error: Syntax error
File "18-mutable_records/problem.ml", line 29, characters 20-25:
29 |   ; mutable color : color  (* but they often change color *)
                         ^^^^^
Error: Unbound value compare_color
Hint: Did you mean compare_bool or compare_char?
File "21-reading_sigs/problem.ml", line 92, characters 19-33:
92 |   Float.( = ) 2.5 (Fraction.value (Fraction.create ~numerator:5 ~denominator:2))
                        ^^^^^^^^^^^^^^
Error: Unbound value Fraction.value
File "15-options/problem.ml", line 55, characters 4-8:
55 |   | None
         ^^^^
Error: This pattern should not be a constructor, the expected type is 'a * 'b
